--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "testtea",
+    "name": "testtea88",
     "version": "1.0.0",
     "description": "A set of tools for working with Web3 and Ethereum smart contracts.",
     "main": "index.js",
